--- a/ServicesMonitor/src/log_config.json
+++ b/ServicesMonitor/src/log_config.json
@@ -7,19 +7,49 @@
         }
     },
     "handlers": {
-        "file_handler": {
+        "httpd_service_handler": {
             "class": "logging.handlers.RotatingFileHandler",
             "level": "INFO",
             "formatter": "json",
-            "filename": "main.jsonli",
+            "filename": "httpd_service_log.json",
+            "maxBytes": 10485760,
+            "backupCount": 3
+        },
+        "postgres_service_handler": {
+            "class": "logging.handlers.RotatingFileHandler",
+            "level": "INFO",
+            "formatter": "json",
+            "filename": "postgres_service_log.json",
+            "maxBytes": 10485760,
+            "backupCount": 3
+        },
+        "rabbitmq_service_handler": {
+            "class": "logging.handlers.RotatingFileHandler",
+            "level": "INFO",
+            "formatter": "json",
+            "filename": "rabbitmq_service_log.json",
             "maxBytes": 10485760,
             "backupCount": 3
         }
     },
     "loggers": {
-        "root": {
-            "handlers": "file_handler",
-            "level": "DEBUG"
+        "httpd_service": {
+            "handlers": [
+                "httpd_service_handler"
+            ],
+            "level": "INFO"
+        },
+        "postgres_service": {
+            "handlers": [
+                "postgres_service_handler"
+            ],
+            "level": "INFO"
+        },
+        "rabbitmq_service": {
+            "handlers": [
+                "rabbitmq_service_handler"
+            ],
+            "level": "INFO"
         }
     }
 }
