--- a/ServicesMonitor/src/log_config.json
+++ b/ServicesMonitor/src/log_config.json
@@ -7,6 +7,14 @@
         }
     },
     "handlers": {
+        "monitor_service_handler": {
+            "class": "logging.handlers.RotatingFileHandler",
+            "level": "INFO",
+            "formatter": "json",
+            "filename": "monitor_service_log.json",
+            "maxBytes": 10485760,
+            "backupCount": 3
+        },
         "httpd_service_handler": {
             "class": "logging.handlers.RotatingFileHandler",
             "level": "INFO",
@@ -33,6 +41,12 @@
         }
     },
     "loggers": {
+        "__main__": {
+            "handlers": [
+                "monitor_service_handler"
+            ],
+            "level": "INFO"
+        },
         "httpd_service": {
             "handlers": [
                 "httpd_service_handler"
